terraform/nat_instance.tf
# インスタンス作成
resource "aws_instance" "nat_1a" {
  ami                         = data.aws_ami.al2023.id
  instance_type               = var.instance_type
  vpc_security_group_ids      = [aws_security_group.nat_sg.id]
  subnet_id                   = aws_subnet.pub_1a.id
  associate_public_ip_address = true

  # 【重要】自分宛て以外のパケットも転送できるようにする（ルーター化）
  source_dest_check = false

  # 前に作ったインスタンスプロファイル（SSM用）を装着
  iam_instance_profile = aws_iam_instance_profile.nat_profile.name

  # インスタンス起動時に実行するスクリプト（パケット転送の有効化）
  user_data = <<-EOF
              #!/bin/bash
              # IPフォワーディングを有効化（自分宛じゃなくても、通り抜けを許可）
              echo 1 > /proc/sys/net/ipv4/ip_forward
              # 再起動しても設定が消えないように保存
              echo "net.ipv4.ip_forward = 1" >> /etc/sysctl.conf

              # iptablesのインストール
              dnf install -y iptables-services

              # デフォルトで設定されている「拒否ルール入りのファイル」を
              # 「最初から全部許可（ACCEPT）する設定」で上書きする
              cat <<'INNER_EOF' > /etc/sysconfig/iptables
              *filter
              :INPUT ACCEPT [0:0]
              :FORWARD ACCEPT [0:0]
              :OUTPUT ACCEPT [0:0]
              COMMIT
              INNER_EOF

              # iptablesの起動、自動起動設定
              systemctl enable iptables
              systemctl start iptables

              # ネットワークインターフェース名の自動取得
              PRIMARY_IF=$(ip route | grep default | awk '{print $5}')

              # マスカレード設定
              iptables -t nat -A POSTROUTING -o $PRIMARY_IF -j MASQUERADE
              /sbin/iptables-save > /etc/sysconfig/iptables
              EOF

  tags = {
    Name = "${var.project_name}-nat-1a"
  }
}

resource "aws_instance" "nat_1c" {
  ami                         = data.aws_ami.al2023.id
  instance_type               = var.instance_type
  vpc_security_group_ids      = [aws_security_group.nat_sg.id]
  subnet_id                   = aws_subnet.pub_1c.id
  associate_public_ip_address = true

  # 【重要】自分宛て以外のパケットも転送できるようにする（ルーター化）
  source_dest_check = false

  # 前に作ったインスタンスプロファイル（SSM用）を装着
  iam_instance_profile = aws_iam_instance_profile.nat_profile.name

  # インスタンス起動時に実行するスクリプト（パケット転送の有効化）
  user_data = <<-EOF
              #!/bin/bash
              # IPフォワーディングを有効化（自分宛じゃなくても、通り抜けを許可）
              echo 1 > /proc/sys/net/ipv4/ip_forward
              # 再起動しても設定が消えないように保存
              echo "net.ipv4.ip_forward = 1" >> /etc/sysctl.conf

              # iptablesのインストール
              dnf install -y iptables-services

              # デフォルトで設定されている「拒否ルール入りのファイル」を
              # 「最初から全部許可（ACCEPT）する設定」で上書きする
              cat <<'INNER_EOF' > /etc/sysconfig/iptables
              *filter
              :INPUT ACCEPT [0:0]
              :FORWARD ACCEPT [0:0]
              :OUTPUT ACCEPT [0:0]
              COMMIT
              INNER_EOF

              # iptablesの起動、自動起動設定
              systemctl enable iptables
              systemctl start iptables

              # ネットワークインターフェース名の自動取得
              PRIMARY_IF=$(ip route | grep default | awk '{print $5}')

              # マスカレード設定
              iptables -t nat -A POSTROUTING -o $PRIMARY_IF -j MASQUERADE
              /sbin/iptables-save > /etc/sysconfig/iptables
              EOF

  tags = {
    Name = "${var.project_name}-nat-1c"
  }
}

#EIP作成
resource "aws_eip" "nat-1a" {
    instance = aws_instance.nat_1a.id
    domain   = "vpc"
    
    tags = {
        Name = "${var.project_name}-nat-1a-eip"
    }
}

resource "aws_eip" "nat-1c" {
    instance = aws_instance.nat_1c.id
    domain   = "vpc"
    
    tags = {
        Name = "${var.project_name}-nat-1c-eip"
    }
}
